--- a/004_e-mall/index.html
+++ b/004_e-mall/index.html
@@ -36,10 +36,10 @@
         <span>图片地址</span><input type="text" name="imgUrl" id="img_input">
         <span>价格</span><input type="text" name="price" id="price_input">
         <label>
-            <input type="checkbox" name="new">新品
+            <input type="checkbox" name="newList" id="newCheck">新品
         </label>
         <label>
-            <input type="checkbox" name="hot">热卖
+            <input type="checkbox" name="hotList" id="hotCheck">热卖
         </label>
         <button type="submit" id="add_form_btn">提交</button>
     </form>
