--- a/006_parent_id/test.html
+++ b/006_parent_id/test.html
@@ -8,6 +8,9 @@
     <title>enheng?</title>
 </head>
 <body>
+<div id="test">
+    <span class="children"></span>
+</div>
 <script src="js/data.js"></script>
 </body>
 </html>
